flux/applications/trillium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trilium-ingress
  namespace: trilium
spec:
  ingressClassName: traefik
  rules:
    - host: trilium.bibletoon.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trilium
                port:
                  number: 8080
